Added GitHub Actions CI/CD Pipeline and 10k Concurrency Test